standards/gnds-2.0-alpha/alpha/c/src/v2.0/common/Halflife.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ remark
// Constructs you're LESS likely to care about are preceded with:
//    // --- remark
// Anything not marked as above can be ignored by most users.
//
// Halflife is the basic handle type in this file. Example:
//    // Create a default Halflife object:
//    Halflife handle = HalflifeDefault();
// Functions involving Halflife are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_ALPHA_V2_0_COMMON_HALFLIFE
#define C_INTERFACE_ALPHA_V2_0_COMMON_HALFLIFE

#include "GNDStk.h"
#include "v2.0/common/String.h"
#include "v2.0/common/Double.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct HalflifeClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Halflife
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct HalflifeClass *Halflife;

// --- Const-aware handles.
typedef const struct HalflifeClass *const ConstHandle2ConstHalflife;
typedef       struct HalflifeClass *const ConstHandle2Halflife;
typedef const struct HalflifeClass *      Handle2ConstHalflife;
typedef       struct HalflifeClass *      Handle2Halflife;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstHalflife
HalflifeDefaultConst();

// +++ Create, default
extern_c Handle2Halflife
HalflifeDefault();

// --- Create, general, const
extern_c Handle2ConstHalflife
HalflifeCreateConst(
   ConstHandle2ConstString string,
   ConstHandle2ConstDouble Double
);

// +++ Create, general
extern_c Handle2Halflife
HalflifeCreate(
   ConstHandle2ConstString string,
   ConstHandle2ConstDouble Double
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
HalflifeAssign(ConstHandle2Halflife This, ConstHandle2ConstHalflife from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
HalflifeDelete(ConstHandle2ConstHalflife This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
HalflifeRead(ConstHandle2Halflife This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
HalflifeWrite(ConstHandle2ConstHalflife This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
HalflifePrint(ConstHandle2ConstHalflife This);

// +++ Print to standard output, as XML
extern_c int
HalflifePrintXML(ConstHandle2ConstHalflife This);

// +++ Print to standard output, as JSON
extern_c int
HalflifePrintJSON(ConstHandle2ConstHalflife This);


// -----------------------------------------------------------------------------
// Child: string
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
HalflifeStringHas(ConstHandle2ConstHalflife This);

// --- Get, const
extern_c Handle2ConstString
HalflifeStringGetConst(ConstHandle2ConstHalflife This);

// +++ Get, non-const
extern_c Handle2String
HalflifeStringGet(ConstHandle2Halflife This);

// +++ Set
extern_c void
HalflifeStringSet(ConstHandle2Halflife This, ConstHandle2ConstString string);


// -----------------------------------------------------------------------------
// Child: Double
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
HalflifeDoubleHas(ConstHandle2ConstHalflife This);

// --- Get, const
extern_c Handle2ConstDouble
HalflifeDoubleGetConst(ConstHandle2ConstHalflife This);

// +++ Get, non-const
extern_c Handle2Double
HalflifeDoubleGet(ConstHandle2Halflife This);

// +++ Set
extern_c void
HalflifeDoubleSet(ConstHandle2Halflife This, ConstHandle2ConstDouble Double);


// -----------------------------------------------------------------------------
// Custom functionality
// -----------------------------------------------------------------------------

#include "v2.0/common/Halflife/src/custom.h"

#undef extern_c
#endif