versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Halflife.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalHalflife
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function HalflifeDefaultConst() &
      bind(C, name='HalflifeDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function HalflifeDefaultConst

!! Create, default
function HalflifeDefault() &
      bind(C, name='HalflifeDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function HalflifeDefault

!! Create, general, const
function HalflifeCreateConst( &
   string, &
   Double &
) &
      bind(C, name='HalflifeCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: string
   type(c_ptr), value :: Double
   type(c_ptr) :: handle
end function HalflifeCreateConst

!! Create, general
function HalflifeCreate( &
   string, &
   Double &
) &
      bind(C, name='HalflifeCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: string
   type(c_ptr), value :: Double
   type(c_ptr) :: handle
end function HalflifeCreate

!! Assign
subroutine HalflifeAssign(handleLHS, handleRHS) &
      bind(C, name='HalflifeAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine HalflifeAssign

!! Delete
subroutine HalflifeDelete(handle) &
      bind(C, name='HalflifeDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine HalflifeDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function HalflifeRead(handle, filename, filenameSize) &
      bind(C, name='HalflifeRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function HalflifeRead

!! Write to file
function HalflifeWrite(handle, filename, filenameSize) &
      bind(C, name='HalflifeWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function HalflifeWrite

!! Print to standard output, in our prettyprinting format
function HalflifePrint(handle) &
      bind(C, name='HalflifePrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function HalflifePrint

!! Print to standard output, as XML
function HalflifePrintXML(handle) &
      bind(C, name='HalflifePrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function HalflifePrintXML

!! Print to standard output, as JSON
function HalflifePrintJSON(handle) &
      bind(C, name='HalflifePrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function HalflifePrintJSON


!! -----------------------------------------------------------------------------
!! Child: string
!! -----------------------------------------------------------------------------

!! Has
function HalflifeStringHas(handle) &
      bind(C, name='HalflifeStringHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function HalflifeStringHas

!! Get, const
function HalflifeStringGetConst(handle) &
      bind(C, name='HalflifeStringGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function HalflifeStringGetConst

!! Get
function HalflifeStringGet(handle) &
      bind(C, name='HalflifeStringGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function HalflifeStringGet

!! Set
subroutine HalflifeStringSet(handle, fieldHandle) &
      bind(C, name='HalflifeStringSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine HalflifeStringSet


!! -----------------------------------------------------------------------------
!! Child: Double
!! -----------------------------------------------------------------------------

!! Has
function HalflifeDoubleHas(handle) &
      bind(C, name='HalflifeDoubleHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function HalflifeDoubleHas

!! Get, const
function HalflifeDoubleGetConst(handle) &
      bind(C, name='HalflifeDoubleGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function HalflifeDoubleGetConst

!! Get
function HalflifeDoubleGet(handle) &
      bind(C, name='HalflifeDoubleGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function HalflifeDoubleGet

!! Set
subroutine HalflifeDoubleSet(handle, fieldHandle) &
      bind(C, name='HalflifeDoubleSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine HalflifeDoubleSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalHalflife
